[gd_scene load_steps=18 format=3 uid="uid://drkhwqtc0jjix"]

[ext_resource type="Texture2D" uid="uid://d4mymfb404m0l" path="res://NPC/defenders/test_defender/test_defender.png" id="1_stnk3"]
[ext_resource type="Script" path="res://state_machine/finite_state_machine.gd" id="3_wnfls"]
[ext_resource type="Script" path="res://state_machine/states/idle_state.gd" id="4_sp4bv"]
[ext_resource type="Script" path="res://state_machine/states/follow_state.gd" id="5_ijoia"]
[ext_resource type="Script" path="res://state_machine/states/attack_state.gd" id="6_xdpll"]
[ext_resource type="Script" path="res://state_machine/states/attack_interval_state.gd" id="7_v7xip"]
[ext_resource type="Script" path="res://state_machine/states/death_state.gd" id="8_fh5sm"]

[sub_resource type="GDScript" id="GDScript_qrsf7"]
script/source = "extends NPC

var active_follow: bool = false

func _ready():
	get_closest_target()
	progress_bar.max_value = health
	progress_bar.value = health

func _physics_process(_delta):
	move_and_slide()
	
func _on_detection_range_body_entered(body):
	add_target(body)


"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qwino"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1w2cp"]

[sub_resource type="Animation" id="Animation_x2uka"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kvwtk"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_awpmg"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_yphac"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_jt5yv"]
resource_name = "move"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 37]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_spxqo"]
_data = {
"RESET": SubResource("Animation_x2uka"),
"attack": SubResource("Animation_kvwtk"),
"death": SubResource("Animation_awpmg"),
"idle": SubResource("Animation_yphac"),
"move": SubResource("Animation_jt5yv")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_1kbvq"]
radius = 71.0634

[node name="defender" type="CharacterBody2D" node_paths=PackedStringArray("state_machine", "attack_timer") groups=["defender"]]
collision_layer = 4
collision_mask = 6
script = SubResource("GDScript_qrsf7")
health = 30
mov_speed = 20.0
attack_speed = 1.0
valid_targets = Array[String](["enemy"])
attack_damage = 10
state_machine = NodePath("FiniteStateMachine")
attack_timer = NodePath("AttackTimer")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_stnk3")
hframes = 13
vframes = 5
region_rect = Rect2(0, 0, 96, 96)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visibility_layer = 7
shape = SubResource("RectangleShape2D_qwino")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1w2cp")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "actor")]
script = ExtResource("3_wnfls")
initial_state = NodePath("IdleState")
actor = NodePath("..")

[node name="IdleState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animation_player")]
script = ExtResource("4_sp4bv")
actor = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="FollowState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animation_player")]
script = ExtResource("5_ijoia")
actor = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="AttackState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animation_player")]
script = ExtResource("6_xdpll")
actor = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="AttackIntervalState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animation_player")]
script = ExtResource("7_v7xip")
actor = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="DeathState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animation_player")]
script = ExtResource("8_fh5sm")
actor = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_spxqo")
}

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_1kbvq")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -11.0
offset_top = -38.0
offset_right = 40.0
offset_bottom = -11.0
scale = Vector2(0.5, 0.5)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
